Add contact picker button and display results in a TextView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Full Volume Text</string>
+    <string name="pick_contact_button_text">Pick Contact</string>
 </resources>
