--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Full Volume Text</string>
+    <string name="app_name">Textecutor</string>
     <string name="pick_contact_button_text">Pick Contact</string>
 </resources>
