--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Textecutor</string>
     <string name="add_contact_button_text">Add Authorized Contact</string>
+    <string name="delete_confirmation_message">Do you want to remove this contact from the authorized users list?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="toast_message_deletion_successful">Successfully deleted contact</string>
+    <string name="toast_message_failed_to_delete_contact">Failed to delete contact</string>
 </resources>
