--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="delete_confirmation_message">Do you want to remove this contact from the authorized users list?</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
-    <string name="toast_message_deletion_successful">Successfully deleted contact</string>
-    <string name="toast_message_failed_to_delete_contact">Failed to delete contact</string>
+    <string name="message_deletion_successful">Successfully deleted contact</string>
+    <string name="message_failed_to_delete_contact">Failed to delete contact</string>
+    <string name="message_add_allowed_contact_success">Successfully added a contact to the allowed list from the contact database.</string>
+    <string name="message_add_allowed_contact_fail">Failed to insert record into allowed list from contact database.</string>
 </resources>
