--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="message_failed_to_delete_contact">Failed to delete contact</string>
     <string name="message_add_allowed_contact_success">Successfully added a contact to the allowed list from the contact database.</string>
     <string name="message_add_allowed_contact_fail">Failed to insert record into allowed list from contact database.</string>
+    <string name="message_contact_already_added">This contact was already on the allowed list.</string>
 </resources>
